<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5sp"
    android:background="@drawable/customborder"
>

    <TextView
            android:id="@+id/target_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textNormal"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:text="@string/target_title"
    />

    <TextView
            android:id="@+id/num_of_rolls"
            android:layout_below="@id/target_title"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textNormal"
            android:textSize="30sp"
            android:text="@string/result_num_of_rolls"
    />

    <TextView
            android:id="@+id/distance_traveled"
            android:layout_below="@id/num_of_rolls"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textNormal"
            android:textSize="30sp"
            android:text="@string/result_distance_travled_title"
    />

</RelativeLayout>